_sass/_boxes.scss
.google-maps {
  height: 320px;
}

.entry.-in-list {
  border: 0;
}

.content {
  padding-top: 1rem;
}

.clear {
  clear: both;
}

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

span.error {
  background: #f3e4dd;
  border: 1px solid #da5a19;
  padding: 0.5rem 0.8rem;
  display: block;
}

.info-box {
  background: #f3e4dd;
  border: 1px solid #da5a19;
  padding: 0.5rem 0.8rem;
}

.wrapper {
  max-width: $max-width;
  margin: 0 auto;
}

.site-footer {
  overflow: hidden;

  ul {
    margin: 0;
    padding: 0;
  }

  li {
    margin: 0;
    list-style: none;
  }
  .column {
    width: 50%;
    float: left;
  }
}

.paginator {
  text-align: center;
  border-top: 1px solid $border-color;
  padding-top: 1rem;
  margin: 3rem 0;
  overflow: hidden;

  .__prev, .__current, .__next {
    line-height: 1.7em;
    text-decoration: none;
    vertical-align: middle;
    display: block;
  }

  .__prev, .__next {
    &:hover {
      text-decoration: underline;
    }
  }

  .__current { font-size: 1.1em; }
  .__prev { float: right; }
  .__next { float: left; }
}

.table {
  border-collapse: separate;
  border-spacing: 0.2rem;
  margin: 0rem -0.45rem;
  width: 100%;

  th, td {
    text-align: left;
    padding: 0.25rem;
  }

  th {
    font-weight: 500;
    padding: 0.5rem 0.25rem;
    border-bottom: 1px solid #aaa;
  }

  .table {
    width: calc(100% + 0.8rem);
  }
}

.tag-menu {
  overflow: hidden;
  margin: 0.5rem 0;
  display: flex;

  h4 {
    font-weight: normal;
    font-size: 1rem;
    margin: 0.1rem 0;
    padding-right: 0.5rem;
  }

  ul {
    font-weight: normal;
    margin: 0;
    padding: 0;
    float: left;
  }

  li {
    margin-right: 0.5rem;
    display: inline;

    a {
      text-decoration: none;
    }

    &.active a {
      color: #222;
      text-decoration: underline;
    }
  }
}

hr {
  background: transparent;
  border: 0;
  border-bottom: $seperator-border;
  margin: 2rem 0;
  height: 1px;
  clear: both;
}

iframe.google-maps {
  border: 1px solid #aaa;
  margin: 1rem 0;
  box-sizing: border-box;
  width: 100%;
  height: 280px;
}

ul.committee {
  list-style: none;
  padding: 0;

  li {
    margin: 0.4rem 0;
  }

  a {
    text-decoration: none;
  }

  img {
    height: 60px;
    vertical-align: middle;
  }

  span {
    margin-left: 1rem;
  }
}

.tickets-for-sale {
  text-align: center;
  margin: 1rem 0;
  overflow: hidden;
}

.tickets-for-sale_ticket {
  color: #000;
  margin: 0 2%;
  width: 29%;
  display: block;
  float: left;

  &, &:hover {
    text-decoration: none;
  }

  h2 {
    font-size: 1.3rem;
  }

  b {
    color: #70b51c;
    font-size: 2rem;
    margin: 1rem;
    display: block;
  }

  &:hover {
    b {
      text-decoration: underline;
    }
  }
}

